Add links to stuff and resume

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 		<title>davertron.com</title>
 	</head>
 	<body>
-		<h1>davertron.com</h1>
+		<h1>davertron</h1>
+		<ul>
+			<li><a href="/david_davis_resume.pdf">Resume</a></li>
+			<li><a href="http://github.com/davertron">Github</a></li>
+			<li><a href="http://lnkd.in/ZNAJtW">LinkedIn</a></li>
+			<li><a href="http://news.ycombinator.com/user?id=Davertron">Hacker News</a></li>
+			<li><a href="https://twitter.com/davertron">Twitter</a></li>
+		</ul>
 	</body>
 </html>
