Open links in a new tab

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<body>
 		<h1>davertron</h1>
 		<ul>
-			<li><a href="/david_davis_resume.pdf">Resume</a></li>
-			<li><a href="http://github.com/davertron">Github</a></li>
-			<li><a href="http://lnkd.in/ZNAJtW">LinkedIn</a></li>
-			<li><a href="http://news.ycombinator.com/user?id=Davertron">Hacker News</a></li>
-			<li><a href="https://twitter.com/davertron">Twitter</a></li>
+			<li><a target="_blank" href="/david_davis_resume.pdf">Resume</a></li>
+			<li><a target="_blank" href="http://github.com/davertron">Github</a></li>
+			<li><a target="_blank" href="http://lnkd.in/ZNAJtW">LinkedIn</a></li>
+			<li><a target="_blank" href="http://news.ycombinator.com/user?id=Davertron">Hacker News</a></li>
+			<li><a target="_blank" href="https://twitter.com/davertron">Twitter</a></li>
 		</ul>
 	</body>
 </html>
