--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 width: 50vw;
                 margin-top: 10%;
             }
+
+            /* Smartphones (portrait and landscape) ----------- */
+            @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+                font-size: 2.5em;
+            }
         </style>
     </head>
     <body>
