--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
             /* Smartphones (portrait and landscape) ----------- */
             @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-                font-size: 2.5em;
+                body {
+                    font-size: 2.5em;
+                }
             }
         </style>
     </head>
