Update media query CSS again

--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
             /* Smartphones (portrait and landscape) ----------- */
             @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
                 body {
-                    font-size: 2.5em;
+                    font-size: 1.25em;
+                }
+                
+                #container {
+                    margin-top: 0;
+                    top: 50%;
+                    position: absolute;
+                    translateY(-50%);
                 }
             }
         </style>
