--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     margin-top: 0;
                     top: 50%;
                     position: absolute;
-                    translateY(-50%);
+                    transform: translateY(-50%);
                 }
             }
         </style>
