--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h1>Dave Davis</h1>
         <p>Front-End Developer. JavaScript Jockey. React Wrangler. Dork Dad.</p>
         <ul class="links">
-            <li><a target="_blank" href="/david_davis_resume.pdf">Resume</a></li>
+            <li><a target="_blank" href="https://docs.google.com/document/d/12g50qJem_twcVmCw90jw04F4wuytgCLcJpCELamek7g/edit?usp=sharing">Resume</a></li>
             <li><a target="_blank" href="http://github.com/davertron">Github</a></li>
             <li><a target="_blank" href="http://lnkd.in/ZNAJtW">LinkedIn</a></li>
             <li><a target="_blank" href="http://news.ycombinator.com/user?id=Davertron">Hacker News</a></li>
